kubernetes/apps/services/plane/app/github-webhook-ingress.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-github-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${HOME_DOMAIN}
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  ingressClassName: external
  rules:
  - host: plane.${HOME_DOMAIN}
    http:
      paths:
      - path: /silo/api/github/github-webhook
        pathType: Exact
        backend:
          service:
            name: plane-silo
            port:
              number: 3000
