kubernetes/apps/services/plane/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Plane"
    homepage.shamubernetes.com/description: "Projects and work items"
    homepage.shamubernetes.com/group: "Tools"
    homepage.shamubernetes.com/order: "20"
    homepage.shamubernetes.com/favorite: "true"
    homepage.shamubernetes.com/icon: "dashboard-icons:plane"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "plane.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /spaces/
    backendRefs:
    - name: plane-space
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /god-mode/
    backendRefs:
    - name: plane-admin
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /api/
    - path:
        type: PathPrefix
        value: /auth/
    - path:
        type: PathPrefix
        value: /graphql/
    - path:
        type: PathPrefix
        value: /marketplace/
    backendRefs:
    - name: plane-api
      port: 8000
  - matches:
    - path:
        type: PathPrefix
        value: /live/
    backendRefs:
    - name: plane-live
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /silo/
    backendRefs:
    - name: plane-silo
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: plane-web
      port: 3000
